# app-complex

./: .gitignore
drawing/: CMakeLists.txt  Makefile  Package10.appxmanifest  _.cpp  _.h  __implement.cpp  _app_complex_drawing.h  _drawing.h  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _main_fedora_kde_35.inl  _packages.txt  _references.txt  _static_factory_.inl  aaa_app.h  app_complex_drawing.cbp  app_complex_drawing.def  application.cpp  application.h  cmake_install.cmake  complex_drawing.cbp  complex_drawing.vcxproj  complex_drawing.vcxproj.filters  deployment.rc  deps.txt  framework.h  matter.txt  nord_app_complex_drawing.vcxproj  nord_app_complex_drawing.vcxproj.filters  nord_impl_app_complex_drawing.vcxproj  pane_impact.cpp  pane_impact.h  pane_view.cpp  pane_view.h  shared_app_complex_drawing.vcxproj  shared_app_complex_drawing.vcxproj.filters  static_app_complex_drawing.vcxproj  (+6 more)
drawing/__implement/: CMakeLists.txt  __implement.cpp  _static_factory_.inl  application.cpp  application_main.cpp  input.xcfilelist  main.cpp  nord_impl_app_complex_drawing.vcxproj  nord_impl_app_complex_drawing.vcxproj.filters  output.xcfilelist  shared_app_complex_drawing.vcxproj  uwp_app_complex_drawing.vcxproj  uwp_app_complex_drawing.vcxproj.filters  uwp_app_complex_drawing_TemporaryKey.pfx
drawing/_app_complex_drawing.xcodeproj/: project.pbxproj
drawing/_ios_app_complex_drawing.xcodeproj/: project.pbxproj
drawing/app_complex_drawing.xcodeproj/: project.pbxproj
drawing/app_complex_drawing1.xcodeproj/: project.pbxproj
drawing/drawing.xcodeproj/: project.pbxproj
drawing/ios/: Info.plist  Launch Screen.storyboard
drawing/macos/: main.cpp
form/: 001.cpp  002.cpp  CMakeLists.txt  Makefile  _.cpp  _.h  _app_complex_form.h  _app_complex_form_.cpp  _dependencies.txt  _factory.cpp  _library.h  _main.cpp  _main.inl  _main_.inl  _main_fedora_kde_35.inl  _old.h  _packages.txt  _references.txt  _static_factory_.inl  app_complex_form.cbp  app_complex_form.def  application.cpp  application.h  cmake_install.cmake  complex_form.cbp  complex_form.vcxproj  complex_form.vcxproj.filters  deployment.rc  deps.txt  document.cpp  document.h  form.cpp  form.h  form_001.cpp  form_001.h  form_002.cpp  form_002.h  frame.cpp  frame.h  framework.h  (+40 more)
form/__implement/: CMakeLists.txt  __implement.cpp  _static_factory_.inl  application.cpp  application_main.cpp  input.xcfilelist  main.cpp  nord_impl_app_complex_form.vcxproj  nord_impl_app_complex_form.vcxproj.filters  output.xcfilelist  (+4 more)
video_capture/: CMakeLists.txt  Makefile  _.cpp  _.h  __implement.cpp  _app_complex_video_capture.h  _dependencies.txt  _factory.cpp  _library.h  _main.cpp  _main.inl  _packages.txt  _references.txt  _u_app_complex_video_capture.vcxproj  _u_app_complex_video_capture.vcxproj.filters  _videocapture.cpp  a_capture.cpp  a_capture.h  a_previewwindow.cpp  a_thumbnailwindow.cpp  a_utils.cpp  aaa_render.cpp  aaa_render.h  aaa_videocapture.cpp  aaa_videocapture_font_view.cpp  aaa_videocapture_font_view.h  aaa_videocapture_gcom.cpp  aaa_videocapture_gcom.h  aaa_videocapture_switcher_view.cpp  aaa_videocapture_switcher_view.h  and_videocapture.vcxproj  app_complex_video_capture.cbp  app_complex_video_capture.def  app_complex_video_capture.vcxproj  app_complex_video_capture.vcxproj.filters  application.cpp  application.h  b_bufferlock.h  b_common.h  b_device.cpp  (+81 more)
video_input/: CMakeLists.txt  CMakeListsBk.txt  _.h  _constant.h  _function.h  _struct.cpp  _struct.h  aaa__library.h  aaa_image_grabber.cpp  aaa_image_grabber.h  aaa_image_grabber_thread.cpp  aaa_image_grabber_thread.h  aaa_media_foundation.cpp  aaa_raw_image.cpp  aaa_test_video_input.cpp  asynchronous_cache.h  audio.cbp  debug_print_out.h  department.cpp  department.h  deployment.rc  device.cpp  device.h  device_array.cpp  device_array.h  format_reader.cpp  format_reader.h  frame.cpp  frame.h  framework.h  media_format.cpp  media_format.h  nord_audio.vcxproj  render.cpp  render.h  u_video_input.vcxproj  u_video_input.vcxproj.filters  video_input.cbp  video_input.cpp  video_input.def  (+3 more)
video_input_avfoundation/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _struct.cpp  _video_input_avfoundation.h  aaa_debug_print_out.cpp  aaa_department.cpp  aaa_device_array.cpp  aaa_raw_image.cpp  aaa_test_video_input.cpp  audio.cbp  avcapture_device_callback.h  avcapture_video_input_callback.h  avfoundation.mm  callback.cpp  deployment.rc  device.cpp  device.h  framework.h  m_audio.vcxproj  render.cpp  render.h  thread.cpp  thread.h  u_audio.vcxproj  video_input.cpp  video_input.h  video_input_media_foundation.vcxproj  video_input_media_foundation.vcxproj.filters
video_input_media_foundation/: CMakeLists.txt  _.cpp  _.h  __m_audio.vcxproj.filters  __nord_audio.vcxproj  __u_video_input_media_foundation.vcxproj  __u_video_input_media_foundation.vcxproj.filters  _factory.cpp  _struct.cpp  aaa__library.h  aaa_debug_print_out.cpp  aaa_department.cpp  aaa_device_array.cpp  aaa_raw_image.cpp  aaa_test_video_input.cpp  audio.vcxproj.filters  callback.cpp  callback.h  deployment.rc  device.cpp  device.h  format_reader.cpp  format_reader.h  media_format.cpp  media_format.h  media_foundation.cpp  media_foundation.h  render.cpp  render.h  thread.cpp  thread.h  video_input.cpp  video_input.h  video_input_media_foundation.def  video_input_media_foundation.vcxproj  video_input_media_foundation.vcxproj.filters
video_input_video_for_linux/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _functionh_ffmpeg.h  _struct.cpp  aaa__library.h  aaa_debug_print_out.cpp  aaa_department.cpp  aaa_device_array.cpp  aaa_raw_image.cpp  aaa_test_video_input.cpp  audio.cbp  callback.cpp  callback.h  deployment.rc  device.cpp  device.h  format_reader.cpp  format_reader.h  helpers.cpp  helpers.h  m_audio.vcxproj  media_foundation.cpp  media_foundation.h  mjpeg_decoder.cpp  mjpeg_decoder.h  render.cpp  render.h  thread.cpp  thread.h  u_audio.vcxproj  u_audio.vcxproj.filters  udev.cpp  udev.h  video_input.cpp  video_input.h  video_input_media_foundation.vcxproj  video_input_video_for_linux.cbp  w_audio.vcxproj.filters
(+1347 files in other folders)
